@@ -171,7 +171,6 @@
 	max-width: 100%;
 	height: auto;
 	vertical-align: top;
-	margin: 0;
 }
 
 /*--------------------------------------------------------------
@@ -205,7 +204,7 @@
 --------------------------------------------------------------*/
 .footer-widgets-background {
 	background: #404040;
-	padding: 3em 0 1em;
+	padding: 3em 0 0;
 }
 
 .footer-widgets {
@@ -486,16 +485,12 @@
 	}
 	
 	/* Footer Widgets */
-	.footer-widgets-wrap {
-		padding: 1.5em 1.5em 0;
+	.footer-widgets-background {
+		padding: 2em 0 0;
 	}
 
-	.footer-widgets {
-		margin-right: -1.5em;
-	}
-
-	.footer-widget-column {
-		padding-right: 1.5em;
+	.footer-widgets .widget {
+		margin: 0 0 2em;
 	}
 	
 	/*** Mobile Footer Navigation ***/
@@ -615,8 +610,21 @@
 		max-width: 100%;
 	}
 	
-	.footer-widgets-wrap {
-		padding: 1.2em 1.2em 0;
+	/* Footer Widgets */
+	.footer-widgets-background {
+		padding: 1.5em 0 0;
+	}
+	
+	.footer-widgets {
+		margin-right: -1.5em;
+	}
+
+	.footer-widget-column {
+		padding-right: 1.5em;
+	}
+	
+	.footer-widgets .widget {
+		margin: 0 0 1.5em;
 	}
 
 }
